--- a/src/template.html
+++ b/src/template.html
@@ -49,7 +49,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
 		<% preact.headEnd %>
 	</head>
-	<body class="overflow-x-hidden">
+	<body>
 		<% preact.bodyEnd %>
 	</body>
 </html>
