feat: Styling + content adjustments

--- a/src/template.html
+++ b/src/template.html
@@ -8,8 +8,8 @@
 		<meta name="keywords" content="Zondag, Stroom">
 		<meta name="author" content="STROOM Amsterdam">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta property="og:title" content="STROOM Amsterdam - een soort kerk!" />
-		<meta property="og:description" content="Hier staat een wervende tekst om je naar de site te lokken. Een site waar je kunt lezen dat Stroom elke zondag om 11u plaatsvindt. Klik nu!" />
+		<meta property="og:title" content="STROoM Amsterdam - elke zondag, 11u" />
+		<meta property="og:description" content="STRoOM verbindt ambitie, stad en traditie. Eerlijk, onbevangen, relevant. STRooM is community. STROoM zoekt naar goed nieuws voor Amsterdam." />
 		<meta property="og:image" content="https://stroomamsterdam.nl/assets/str00m_avatar.png" />
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
