fix: Update page title

--- a/src/template.html
+++ b/src/template.html
@@ -3,10 +3,10 @@
 	<head>
 		<title><% preact.title %></title>
 		<meta charset="utf-8">
-		<meta name="title" content="STROOM Amsterdam">
+		<meta name="title" content="STROoM Amsterdam">
 		<meta name="description" content="Elke zondag 11u, Nieuwe Herengracht 18. Meld je aan voor de nieuwsbrief! En meer van zulks.">
 		<meta name="keywords" content="Zondag, Stroom">
-		<meta name="author" content="STROOM Amsterdam">
+		<meta name="author" content="STROoM Amsterdam">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta property="og:title" content="STROoM Amsterdam - elke zondag, 11u" />
 		<meta property="og:description" content="STRoOM verbindt ambitie, stad en traditie. Eerlijk, onbevangen, relevant. STRooM is community. STROoM zoekt naar goed nieuws voor Amsterdam." />
